fixed home more issues

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -1,6 +1,6 @@
 :root {
   --color-primary: #E8798B; /* red-500 */
-  --color-secondary: #FCA5A5; /* red-300 */
+  --color-secondary:#FFF5F7;
   --color-background: #f9fafb;
   --color-text: #111827;
 }
