--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -15,6 +15,10 @@
   background-color: var(--color-secondary);
 }
 
+.bg-footer {
+    background: #ffb5c0;
+}
+
 .text-primary {
   color: var(--color-primary) !important;
 }
