--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -43,7 +43,7 @@
 .home-heading {
     font-family: 'Space Grotesk', sans-serif;
     text-transform: uppercase;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 .font-space-grotesk {
