--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -62,3 +62,8 @@
     font-family: 'Work Sans', sans-serif;
     font-weight: 500;
 }
+
+
+.font-cormorant-upright {
+    font-family: Cormorant Upright;
+}
