--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -3,6 +3,7 @@
   --color-secondary:#FFF5F7;
   --color-background: #f9fafb;
   --color-text: #111827;
+    --font-path: '{{ asset('assets/fonts/RightGrotesk-Medium.otf') }}';
 }
 
 [data-theme="dark"] {
@@ -12,10 +13,11 @@
 }
 
 @font-face {
-  font-family: 'Right Grotesk Medium';
-  src: url('/assets/fonts/RightGrotesk-Medium.otf') format('opentype');
-  font-weight: normal;
+  font-family: 'Right Grotesk';
+  src: url('../../public/assets/fonts/RightGrotesk-Medium.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 .border-primary {
